Bug 1264592 - When doing thumbnails for fennec, don't mark frames as painted because it can interfere with tests. r=mstange, a=lizzard

MozReview-Commit-ID: KOhZZV3aSLv